<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/element_sign"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:text="@string/plus_sign"
        android:textColor="#1fff1f"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/element_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="@string/real"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/element_time_passed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:text="@string/now"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>